# news-to-tools

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: gen_demo.py
examples/: queue.sample.json  workboard.sample.json
news_to_tools/: __init__.py  bio_claim_gate.py  claim_diligence.py  claim_feed.py  cli.py  design_handoff.py  medical_claim_gate.py  model_registry.py  pdf_triage.py  promotion.py  queue_import.py  security_incidents.py  team_policy.py  usage_bank.py  utils.py  workboard.py
scripts/: pr_review_check.sh
tests/: test_cli.py  test_core.py  test_utils.py
