[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "news-to-tools"
version = "0.1.0"
description = "Turn AI/news articles into implementation backlogs, guarded model candidates, and evidence-gated workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Ying Chen" }]
keywords = ["ai", "agents", "news", "workflow", "model-evaluation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/yingchen-coding/news-to-tools"
Repository = "https://github.com/yingchen-coding/news-to-tools"
Issues = "https://github.com/yingchen-coding/news-to-tools/issues"

[project.scripts]
news-to-tools = "news_to_tools.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.11"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
